# concurrency-eval-python

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml  merge.yml  pr.yml
docker/: Dockerfile
src/: lambda_function.py  lambda_function_cpu.py  lambda_function_serial.py  run.py  run_serial.py
