[tool.poetry]
name = "concurrency-eval-python"
version = "0.1.0"
description = ""
authors = ["Ville Kärkkäinen <ville.karkkainen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aioboto3 = "13.2.0"
aws-xray-sdk = "^2.14.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
