[project]
name = "concurrency-eval-python"
version = "0.2.0"
description = "Python code for [How Do You Like Your Lambda Concurrency](https://ville-karkkainen.medium.com/how-do-you-like-your-aws-lambda-concurrency-part-1-introduction-7a3f7ecfe4b5)-blog series."
authors = ["Ville Kärkkäinen <ville.karkkainen@outlook.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # isort
    "I",
    "F"
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

